--- a/content/1.index.md
+++ b/content/1.index.md
@@ -12,14 +12,15 @@ image: '/alpine-0.webp'
 #title
 Hi, I am Danang.
 #description
-- An [open source blog theme](https://github.com/nuxt-themes/alpine) powered by [Nuxt Content](https://content.nuxtjs.org), editable on [Nuxt Studio](https://nuxt.studio).
-- Write pages in Markdown and Vue components with the [MDC syntax](https://content.nuxtjs.org/guide/writing/mdc).
-- Use [**30+ built-in**](https://elements.nuxt.space) components in your Markdown pages.
+-Proficiency in programming languages: Python (Django & Flask), Node.js (Express), -Ruby on Rails, [and others based on your expertise].
+-Database management: PostgreSQL, MongoDB, MySQL.
+-Automation & deployment: Docker, Jenkins, Kubernetes.
+-Performance optimization and scalability.
+-API integration and the creation of user-friendly APIs with comprehensive documentation.
+-In-depth understanding of web security and prevention against common attacks such as SQL Injection, XSS, and CSRF.
 ::
 
-Welcome to my portfolio! As a backend developer with [x years] of experience, I have contributed to the development of various scalable, responsive, and secure applications and systems. Using the latest technologies and best development principles, I always strive to create efficient and reliable backend solutions.  
-
-Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.
+Welcome to my portfolio! As a backend developer with [3 years] of experience, I have contributed to the development of various scalable, responsive, and secure applications and systems. Using the latest technologies and best development principles, I always strive to create efficient and reliable backend solutions.  
 
 ::gallery
 ---
