--- a/content/1.index.md
+++ b/content/1.index.md
@@ -12,12 +12,9 @@ image: '/alpine-0.webp'
 #title
 Hi, I am Danang.
 #description
--Proficiency in programming languages: Python (Django & Flask), Node.js (Express), -Ruby on Rails, [and others based on your expertise].
--Database management: PostgreSQL, MongoDB, MySQL.
--Automation & deployment: Docker, Jenkins, Kubernetes.
--Performance optimization and scalability.
--API integration and the creation of user-friendly APIs with comprehensive documentation.
--In-depth understanding of web security and prevention against common attacks such as SQL Injection, XSS, and CSRF.
+- An [open source blog theme](https://github.com/nuxt-themes/alpine) powered by [Nuxt Content](https://content.nuxtjs.org), editable on [Nuxt Studio](https://nuxt.studio).
+- Write pages in Markdown and Vue components with the [MDC syntax](https://content.nuxtjs.org/guide/writing/mdc).
+- Use [**30+ built-in**](https://elements.nuxt.space) components in your Markdown pages.
 ::
 
 Welcome to my portfolio! As a backend developer with [3 years] of experience, I have contributed to the development of various scalable, responsive, and secure applications and systems. Using the latest technologies and best development principles, I always strive to create efficient and reliable backend solutions.  
