--- a/content/1.index.md
+++ b/content/1.index.md
@@ -12,9 +12,9 @@ image: '/alpine-0.webp'
 #title
 Hi, I am Danang.
 #description
-- An [open source blog theme](https://github.com/nuxt-themes/alpine) powered by [Nuxt Content](https://content.nuxtjs.org), editable on [Nuxt Studio](https://nuxt.studio).
-- Write pages in Markdown and Vue components with the [MDC syntax](https://content.nuxtjs.org/guide/writing/mdc).
-- Use [**30+ built-in**](https://elements.nuxt.space) components in your Markdown pages.
+- Expert in Node.js, golang, and some data processing .
+- I am currently learning ML (machine learning)..
+- If you are interested, you can access my [GitHub](https://github.com/danangfir) account to see some projects.  .
 ::
 
 Welcome to my portfolio! As a backend developer with [3 years] of experience, I have contributed to the development of various scalable, responsive, and secure applications and systems. Using the latest technologies and best development principles, I always strive to create efficient and reliable backend solutions.  
