--- a/content/1.index.md
+++ b/content/1.index.md
@@ -7,13 +7,13 @@ title: About
 
 ::hero
 ---
-image: '/alpine-0.webp'
+image: '/dancug.jpg'
 ---
 #title
-Hi, I am Danang.
+Hi, Danang's here!.
 #description
 - Expert in Node.js, golang, and some data processing .
-- I am currently learning ML (machine learning)..
+- I am currently learning ML (machine learning) Enginer.
 - If you are interested, you can access my [GitHub](https://github.com/danangfir) account to see some projects.  .
 ::
 
