--- a/content/articles/2.configure.md
+++ b/content/articles/2.configure.md
@@ -88,7 +88,7 @@ defineAppConfig({
     footer: {
       credits: {
         enabled: true, // possible value are : true | false
-        repository: 'https://www.github.com/nuxt-themes/alpine' // our github repository
+        repository: 'https://github.com/danangfir/blog-dngvr' // our github repository
       },
       navigation: false, // possible value are : true | false
       position: 'center', // possible value are : 'none' | 'left' | 'center' | 'right'
