--- a/content/1.index.md
+++ b/content/1.index.md
@@ -7,14 +7,14 @@ title: About
 
 ::hero
 ---
-image: '/dancug.jpg'
+image: 'fff.gif'
 ---
 #title
 Hi, Danang's here!.
 #description
 - Expert in Node.js, golang, and some data processing .
 - I am currently learning ML (machine learning) Enginer.
-- If you are interested, you can access my [GitHub](https://github.com/danangfir) account to see some projects.  .
+- If you are interested, you can access my [GitHub](https://github.com/danangfir) account to see some projects.  
 ::
 
 Welcome to my portfolio! As a backend developer with [3 years] of experience, I have contributed to the development of various scalable, responsive, and secure applications and systems. Using the latest technologies and best development principles, I always strive to create efficient and reliable backend solutions.  
@@ -25,5 +25,6 @@ images:
   - /alpine-0.webp
   - /alpine-1.webp
   - /alpine-2.webp
+  - /pxfuel.jpg
 ---
 ::
