--- a/content/articles/2.configure.md
+++ b/content/articles/2.configure.md
@@ -1,9 +1,9 @@
 ---
 cover: /articles/configure-alpine.webp
 author:
-  name: Clément Ollivier
+  name: Danang firmanto
   avatarUrl: https://pbs.twimg.com/profile_images/1370286658432724996/ZMSDzzIi_400x400.jpg
-  link: https://twitter.com/clemcodes
+  link: https://twitter.com/Dan45934931
 date: 2022-08-23
 description: Learn how to configure Alpine with the app.config.ts file.
 layout: article
