--- a/content/1.index.md
+++ b/content/1.index.md
@@ -22,9 +22,9 @@ Welcome to my portfolio! As a backend developer with [3 years] of experience, I 
 ::gallery
 ---
 images:
-  - /alpine-0.webp
-  - /alpine-1.webp
-  - /alpine-2.webp
-  - /pxfuel.jpg
+  - /1.gif
+  - /2.gif
+  - /3.gif
+  - /4.gif
 ---
 ::
