--- a/content/1.index.md
+++ b/content/1.index.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 head.title: Danang
-description: An open source blog theme powered by Nuxt.
+description: web portofolio.
 title: About
 ---
 
