tambah project dan ganti nama

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -2,7 +2,7 @@
 layout: default
 head.title: Danang
 description: web portofolio.
-title: About
+title: Me
 ---
 
 ::hero
@@ -12,7 +12,7 @@ image: 'fff.gif'
 #title
 Hi, Danang's here!.
 #description
-- Expert in Node.js, golang, and some data processing .
+- Expert in Node.js, golang, and some data processing.
 - I am currently learning ML (machine learning) Enginer.
 - If you are interested, you can access my [GitHub](https://github.com/danangfir) account to see some projects.  
 ::
