nambah project arikel

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -2,7 +2,7 @@
 layout: default
 head.title: Danang
 description: web portofolio.
-title: About me
+title: About Me
 ---
 
 ::hero
@@ -12,12 +12,14 @@ image: 'fff.gif'
 #title
 Hi, Danang's here!.
 #description
-- Expert in Node.js, golang, and some data processing.
+- Expert in Node.js, Golang, Python and some data processing.
 - I am currently learning ML (machine learning) Enginer.
 - If you are interested, you can access my [GitHub](https://github.com/danangfir) account to see some projects.  
 ::
 
 Welcome to my portfolio! As a backend developer with [3 years] of experience, I have contributed to the development of various scalable, responsive, and secure applications and systems. Using the latest technologies and best development principles, I always strive to create efficient and reliable backend solutions.  
+
+Outside of programming, I enjoy reading books. I love the pleasure and excitement of gaining new knowledge other than programming from the books I read.
 
 ::gallery
 ---
