--- a/content/articles/1.get-started.md
+++ b/content/articles/1.get-started.md
@@ -2,7 +2,7 @@
 cover: /articles/get-started.webp
 author:
   name: Danang Firmanto
-  avatarUrl: https://pbs.twimg.com/profile_images/1042510623962275840/1Iw_Mvud_400x400.jpg
+  avatarUrl: https://twitter.com/Dan45934931/photo
   link: https://twitter.com/Dan45934931
 date: 2022-08-23
 layout: article
