--- a/content/project-on/1.earhquake-detection.md
+++ b/content/project-on/1.earhquake-detection.md
@@ -11,4 +11,5 @@ layout: article
 # Retrieve BMKG data using BeautifulSoup4 and Request
 
 A Latest Earthquake Detection Package Taken Based on BMKG | Meteorological, Climatological, and Geophysical Agency
- 
+
+this project 
