--- a/content/project-on/1.earhquake-detection.md
+++ b/content/project-on/1.earhquake-detection.md
@@ -12,4 +12,4 @@ layout: article
 
 A Latest Earthquake Detection Package Taken Based on BMKG | Meteorological, Climatological, and Geophysical Agency
 
-this project 
+this program 
